# good-bot

./: .gitignore  .gitpod.yml  .good-bot.yaml  .goodbot.yaml  .recording.py.swp  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.render  LICENSE  README.md  README.rst  app.py  builder.py  cool_name  docker-compose.yml  dockerbuilder.py  go.mod  go.sum  is_this_how_it_ends.py  main.go  mypy.ini  pyproject.toml  recording.py  requirements.txt  so_it_begins.py  starter.py
.github/workflows/: python-package.yml
app/: .functions.py.swp  app.py  classmodule.py  cli.py  funcmodule.py  functions.py  test  test.py  testing.py
app/shell_scripts/: toto.sh
cmd/: conf.go  config.go  rec.go  root.go  stats.go  version.go
cmd/app/: interactive.go
cmd/expectTest/: interactive.go
docker/: Dockerfile
example/: your_script.md
examples/: README.md  goodbot.yaml
examples/basics/: config.yaml  goodbot.yaml  no-audio.yaml
examples/passwords/: .env  docker-compose.yml  passwords.yaml
examples/passwords/passwords-example/scene_1/commands/: file_0.yaml
examples/passwords/passwords-example/scene_1/read/: file_0.txt
examples/text-files/: text-files.yaml
goodbot/: __init__.py  audio.py  cli.py  editor.py  funcmodule.py  recording.py  render.py  shell_commands.py  utils.py
goodbot/widgets/: package.json  rollup.config.js
recording/: .res_finder.py.swp  recording.py  res_finder.py  term_finder.sh  testing.py
runner/: README.md  classmodule.py  pyproject.toml  requirements.txt  runner.py
runner/app/: funcmodule.py
runner/runner/: classmodule.py  funcmodule.py  runner.py
runner/src/: runner.py
runner/tests/: func_testing.py  test_runner.py
runner/tests/examples/: bad_conf.yaml  test_conf.yaml
script/: script.md
src/: classmodule.py  cli.py  funcmodule.py
tests/: test_audio.py  test_funcs.py  test_goodbot.py  test_recording.py  test_render.py  test_shell_commands.py  test_utils.py
tests/examples/: file_0-wrong-version.cast  no-audio.yaml  test_conf.yaml
tests/examples/audio/scene_1/asciicasts/: commands_1.cast  commands_2.cast
v1/: builder.py  starter.py  testing.py
v1/app/: app.py  functions.py
(+23 files in other folders)
