[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "goodbot"
author = "Etienne Parent"
author-email = "etienne.parent@beon.ca"
home-page = "https://github.com/TrickyTroll/good-bot"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"
