[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "goodbot"
author = "Etienne Parent"
author-email = "etienne.parent@beon.ca"
home-page = "https://github.com/TrickyTroll/good-bot"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"
requires-python=">=3.7"
requires = [
    "click==7.1.2",
    "google-cloud-texttospeech==2.3.0",
    "PyYAML==5.4.1"
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "black",
    "hypothesis",
    "mypy"
]
doc = ["sphinx"]

[tool.flit.scripts]
good-bot = "goodbot.cli:main"

[tool.flit.sdist]
include = ["doc/"]
exclude = ["doc/*.html"]

[tool.black]
line-length = 80
target-version = ['py38']