[tool.poetry]
name = "good-bot"
version = "0.1.0"
description = "Automating the recording of documentation videos."
authors = ["Étienne Parent <53831454+TrickyTroll@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
click = "^7.1.2"
google-cloud-texttospeech = "^2.6.0"
rich = "^10.12.0"
ezvi = "^0.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
